--- a/galery11.html
+++ b/galery11.html
@@ -49,7 +49,7 @@
                     <p>
                         <h2>Блондинка в синеве</h2>
                         Некая девушка обернулась на зов и выглядит удивленно.
-                        и красиво. В этой картине прекрасно все: цвета прекрасно
+                        И красиво. В этой картине прекрасно все: цвета прекрасно
                         гармонируют между собой, свет,который падает на ее лицо.
                         Что же ее так удивило? Может появление кого-то или даже
                         чего-то прекрасного? Даже самой захотелось узнать.
@@ -65,7 +65,7 @@
                     <p>
                         <h2>Клоун,который сжег этот город</h2>
                         "Что ты получишь, если смешаешь психически больного одиночку
-                        с обществом, которое игнорирует его и обращается с ним,
+                        с обществом, которое игнорирует его и обращается с ним
                         как с мусором? Ты получишь то, что заслужил"- такими были последние
                         слова Артура Флека перед тем, как застрелитть телеведущего. Это 
                         положило начало конца.
