--- a/galery11.html
+++ b/galery11.html
@@ -67,7 +67,7 @@
                         "Что ты получишь, если смешаешь психически больного одиночку
                         с обществом, которое игнорирует его и обращается с ним
                         как с мусором? Ты получишь то, что заслужил"- такими были последние
-                        слова Артура Флека перед тем, как застрелитть телеведущего. Это 
+                        слова Артура Флека перед тем, как застрелить телеведущего. Это 
                         положило начало конца.
                     </p>
                     <p>Дата завершения: 6 ‎октября ‎2019</p>
