--- a/page1.html
+++ b/page1.html
@@ -85,5 +85,18 @@
             </div>
         </div>
     </div>
+    <div class="BottomBlock1">
+    <footer>
+            <?xml version="1.0" encoding="utf-8"?>
+            <Nodes>
+                <FIO>☻Макаревич Настюшка Александровна </FIO>
+                <FAK>ИТ</FAK>
+                <SPEC> ПОИБМС</SPEC>
+                <GR> 8</GR>
+                <GOD> 2019☻</GOD>
+            </Nodes>
+        </footer>
+    </div>
+    
 </body>
 </html>
