--- a/galery11.html
+++ b/galery11.html
@@ -18,7 +18,7 @@
         <div class="content">
             <p>
                 <a href="page1.html">Главная</a>
-                / Стол заказов
+                / Галерея 
             </p>
         </div>
         <div class="ikon"><img src="pict/ikon.png" alt="" /></div>
