--- a/zakaz1.html
+++ b/zakaz1.html
@@ -5,38 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Стол заказов</title>
-    <link href="style.zakaz1.css" type="text/css" rel="stylesheet" />
-    <link href="TopBlock.css" type="text/css" rel="stylesheet" />
-    <link href="BottomBlock.css" type="text/css" rel="stylesheet" />
+    <link href="style.zakaz1.css" type="text/css" rel="stylesheet" /> <!--стиль для основного блока -->
+    <link href="TopBlock.css" type="text/css" rel="stylesheet" /> <!--стиль для верхнего блока-->
+    <link href="BottomBlock.css" type="text/css" rel="stylesheet" /> <!--стиль для нижнего блока-->
 
-    <!-- <link href="MediaPage1.css" type="text/css" rel="stylesheet" /> -->
-
-    <link rel="shortcut icon" href="pict/ikon.png" type="image/png">
+    <link rel="shortcut icon" href="pict/ikon.png" type="image/png"> <!--иконка-->
 </head>
 <body>
+    <!-- верхний блок -->
     <div class="TopBlock">
         <div class="content">
             <p>
-                <a href="page1.html">Главная</a>
+                <a href="page1.html" title="Главная страница">Главная</a>
                 / Стол заказов
             </p>
         </div>
-        <div class="ikon"><img src="pict/ikon.png" alt="" /></div>
-    </div>
 
+        <div class="ikon">
+            <img src="pict/ikon.png" alt="Иконка" title="Иконка"/>
+        </div>
+    </div>
+    <!-- средний блок -->
     <div class="display">
 
+        <!-- "полный рост" -->
         <div class="full">
             <div class="text">
                 <p>Полный рост: 700 &#8381; | 400 &#8381;</p>
-                <p>Сложный фон,персонаж(и):+50  &#8381;</p>
+                <p>Сложный фон,персонаж(и): +50  &#8381;</p>
                 <p>Фурри, животные: +25  &#8381;</p>
             </div>
 
             <div class="pict1">
-                <img src="pict/full.jpg" alt="" />
+                <img src="pict/full.jpg" alt="Полный рост" title="Полный рост"/>
             </div>
 
+            <!-- кнопка, при нажатии на которую появляется окно типа alert -->
             <div class="DivKnopka">
                 <form onsubmit="alert('Приносим извинения, сайт временно не работает. Для обратной связи просим писать на почту: minskaya_nastya@mail.ru.!');
                         return false">
@@ -44,18 +48,20 @@
                 </form>
             </div>
         </div>
-        
+
+        <!-- "полтела" -->
         <div class="half">
             <div class="text">
                 <p>По бедра: 500 &#8381; | 250 &#8381;</p>
-                <p>Сложный фон,персонаж(и):+50 &#8381;</p>
+                <p>Сложный фон,персонаж(и): +50 &#8381;</p>
                 <p>Фурри, животные: +25 &#8381;</p>
             </div>
 
             <div class="pict2">
-                <img src="pict/half.jpg" alt="" />
+                <img src="pict/half.jpg" alt="Полтела" title="Полтела"/>
             </div>
 
+            <!-- кнопка, при нажатии на которую появляется окно типа alert -->
             <div class="DivKnopka">
                 <form onsubmit="alert('Приносим извинения, сайт временно не работает. Для обратной связи просим писать на почту: minskaya_nastya@mail.ru.!');
                         return false">
@@ -64,17 +70,19 @@
             </div>
         </div>
 
+        <!-- "голова" -->
         <div class="head">
             <div class="text">
                 <p>Голова: 250 &#8381; | 150 &#8381;</p>
-                <p>Сложный фон,персонаж(и):+50 &#8381;</p>
+                <p>Сложный фон,персонаж(и): +50 &#8381;</p>
                 <p>Фурри, животные: +25 &#8381;</p>
             </div>
 
             <div class="pict3">
-                <img src="pict/head.jpg" alt="" />
+                <img src="pict/head.jpg" alt="Голова" title="Голова"/>
             </div>
 
+            <!-- кнопка, при нажатии на которую появляется окно типа alert -->
             <div class="DivKnopka">
                 <form onsubmit="alert('Приносим извинения, сайт временно не работает. Для обратной связи просим писать на почту: minskaya_nastya@mail.ru.!');
                         return false">
@@ -88,26 +96,31 @@
     <div class="BottomBlock">
         <div class="vk">
             <div>
-                <img src="pict/vk.png" alt="" />
+                <img src="pict/vk.png" alt="ВК" title="ВК"/>
             </div>
+
             <div class="a1">
-                <a href="https://vk.com/pingvin_5c">ВКонтакте</a>
+                <a href="https://vk.com/pingvin_5c" title="ВК">ВКонтакте</a>
             </div>
         </div>
+
         <div class="inst">
             <div>
-                <img src="pict/inst.png" alt="" />
+                <img src="pict/inst.png" alt="Инстаграм" title="Инстаграм"/>
             </div>
+
             <div class="a1">
-                <a href="https://www.instagram.com/valmuean/">Instagram</a>
+                <a href="https://www.instagram.com/valmuean/" title="Инстаграм">Instagram</a>
             </div>
         </div>
+
         <div class="devart">
             <div>
-                <img src="pict/devart.png" alt="" />
+                <img src="pict/devart.png" alt="ДевиантАрт" title="ДевиантАрт"/>
             </div>
+
             <div class="a1">
-                <a href="https://www.deviantart.com/poppyan">DeviantArt</a>
+                <a href="https://www.deviantart.com/poppyan" title="ДевиантАрт">DeviantArt</a>
             </div>
         </div>
     </div>
